--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Giampaolo Bellavite",
   "license": "MIT",
   "main": "server.js",
+  "scripts":{
+    "start":"node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.9.2",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
     "express": "^4.10.2",
-    "griddle-react": "^0.2.4",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.4",
     "react": "^0.12.1",
@@ -20,7 +22,6 @@
     "react-router": "^0.11.4",
     "reactabular": "^0.4.2",
     "underscore": "^1.8.2",
-    "vhost": "^3.0.0"
   },
   "devDependencies": {
     "fs-extra": "^0.12.0",
