--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-pagify": "^0.3.3",
     "react-router": "^0.11.4",
     "reactabular": "^0.4.2",
-    "underscore": "^1.8.2"
+    "underscore": "^1.8.2",
+    "superagent":"*"
   },
   "devDependencies": {
     "fs-extra": "^0.12.0",
